--- a/assets/css/divisao.css
+++ b/assets/css/divisao.css
@@ -1,8 +1,10 @@
 .divisao-container {
 display: flex;
 justify-content: center;
-padding-top:390px;
+padding-top:300px;
 }
+
+
 
 .divisao__numero {
     display: flex;
@@ -26,7 +28,11 @@ padding-top:390px;
     font-weight: bold;
     justify-content: center;
     padding-top: 80px;
-    padding-bottom: 35px;
+   
+}
+
+.imgs-titulo {
+    padding-bottom: 80px;
 }
 
 .titulo2 {
@@ -42,13 +48,20 @@ padding-top:390px;
     justify-content: flex-end
 }
 
-.container-img-titulo img {
-    margin-left: 50px;
-    padding-bottom: 100px;
+
+.img-meio {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-meio > img {
+    height: 80px;
+    
 }
 
     #portfolio {
-        padding-top: 200px;
+        padding-top: 250px;
     }
 
   #container-projetos-2{
@@ -56,15 +69,3 @@ padding-top:390px;
   }
 
 
-
-
-@media screen and (max-width:989px) {
-    .divisao-container {
-        padding-top: 300px;
-    }
-
-    h1 .titulo-principal {
-        padding-top: 500px;
-
-    }
-}
