--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -104,7 +104,7 @@ span.navbar-toggler-icon {
 a.nav-link img {
     display: flex;
     align-items: center;
-    background-color: #ffafcc;
+    background-color: black;
     border-radius: 15px;
     width: 30px;
     height: 30px;
